--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Service</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">how it works.</h3>
                 </div>
             </div>
             <div class="row">
@@ -137,7 +137,7 @@
                     </a>
                     <div class="service-caption">
                         <h4>share</h4>
-                        <p class="text-muted">increase the knowledge community</p>
+                        <p class="text-muted">increase community's knowledge</p>
                     </div>
                 </div>
             </div>
